# URDF_debugger

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  urdf_debugger_PRD.md  urdf_validator_PRD.md
docs/superpowers/plans/: 2026-05-24-foundation.md
docs/superpowers/specs/: 2026-05-24-foundation-design.md
tests/: test_cli.py  test_imports.py  test_install.py  test_models.py  test_schema_checks.py  test_urdf_adapter.py
tests/sample_urdf/: Franka_Panda.urdf  Spot.urdf  TurtleBot3.urdf  fetch.urdf
urdf_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
urdf_validator_main/: cli.py
urdf_validator_main/checks/: schema.py  statics.py
urdf_validator_main/integrations/: mujoco_wrapper.py
urdf_validator_main/parser/: urdf_adapter.py  xacro_handler.py
urdf_validator_main/physics/: chain_walker.py  geometry_physics.py
urdf_validator_main/report/: formatter.py  json_export.py  models.py
